--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </form>
       <h1 id="city"></h1>
       <img
-        src="http://openweathermap.org/img/wn/04d@2x.png"
+        src=""
         alt="clear"
         id="icon"
         class="float-left"
